# GameEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  doxygen.conf  run.sh  unittest.sh
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  context.cpp  context.h  datastore.h  geerror.h  keystate.cpp  keystate.h  logging.cpp  logging.h  main.cpp  mousestate.cpp  mousestate.h  object.cpp  object.h  schemaloader.cpp  view.h
src/core/: datastore.h  gamestate.cpp  gamestate.h  geerror.cpp  geerror.h  graphics.cpp  graphics.h  shader.cpp  shader.h  timer.h  version.h  view.h  window.cpp  window.h  world.cpp  world.h
src/data/: spritemapdata.cpp  spritemapdata.h
src/debug/: debug.cpp
src/global/: context.cpp  context.h  geerror.cpp  keystate.cpp  keystate.h  logging.h  mousestate.cpp  mousestate.h  view.h
src/json/schema/: Spritemapping.json
src/object/: image.cpp  image.h  object.cpp  object.h  physicsobject.cpp  physicsobject.h  player.cpp  player.h
src/schema/: SpriteMapSchema.json
src/texture/: spritemap.cpp  spritemap.h  texture.cpp  texture.h  texture_base.h  texturemanager.cpp  texturemanager.h  texturenothing.cpp
src/texture/spritemap/: spritemap.cpp  spritemap.h  spritemapdata.cpp  spritemapdata.h  spritemapmanager.cpp  spritemapmanager.h
src/tools/: CMakeLists.txt
src/tools/packager/: CMakeLists.txt  main.cpp  packager.cpp  packager.h
src/tools/schemaloader/: CMakeLists.txt  schemaloader.cpp
src/tools/spritemapper/: CMakeLists.txt  mainwindow.ui  mainwindow.ui.autosave
src/utility/: keystate.cpp  keystate.h  logging.cpp  logging.h  mousestate.cpp  mousestate.h
test/: CMakeLists.txt  packager.cpp  test.cpp  testjson.h
test/example/: CMakeLists.txt  main.cpp  player.cpp  player.h  spritemap.cpp  spritemap.h
test/example/tex/: spritemap.json
test/json/: badspritemap.json  invalidjson.json  spritemap.json  test.json
test/json/spritemap/: badspritemap.json  duplicatedanimation.json  duplicatedsprite.json  mismatchedanimation.json  mismatchedsprite.json  spritemap.json
test/testfiles/json/spritemap/: badspritemap.json  duplicatedanimation.json  duplicatedsprite.json  mismatchedanimation.json  mismatchedsprite.json  spritemap.json  texturenotfound.json
